[gd_scene load_steps=2 format=3 uid="uid://lxckbuab8tub"]

[ext_resource type="Script" path="res://scenes/UI.gd" id="1_nvc5y"]

[node name="Game" type="Node"]

[node name="2DWorld" type="Node2D" parent="."]

[node name="3DWorld" type="Node3D" parent="."]

[node name="UI" type="Control" parent="." node_paths=PackedStringArray("IpAddrTextEdit", "StartGameButton", "PlayerConnectedLabel", "GetPeersLabel")]
layout_mode = 3
anchors_preset = 0
offset_right = 314.0
offset_bottom = 202.0
script = ExtResource("1_nvc5y")
IpAddrTextEdit = NodePath("IpAddrTextEdit")
StartGameButton = NodePath("StartGameButton")
PlayerConnectedLabel = NodePath("PlayersConnectedLabel")
GetPeersLabel = NodePath("GetPeersLabel")

[node name="HostButton" type="Button" parent="UI"]
layout_mode = 0
offset_right = 38.0
offset_bottom = 12.0
text = "Connect as Host"

[node name="ClientButton" type="Button" parent="UI"]
layout_mode = 0
offset_top = 37.0
offset_right = 133.0
offset_bottom = 68.0
text = "Connect as Client"

[node name="StartGameButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 93.0
offset_top = 144.0
offset_right = 235.0
offset_bottom = 175.0
disabled = true
text = "Start Game
"

[node name="IpAddrTextEdit" type="TextEdit" parent="UI"]
layout_mode = 0
offset_left = 150.0
offset_top = 37.0
offset_right = 267.0
offset_bottom = 70.0
placeholder_text = "IP Address"

[node name="PlayersConnectedLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 247.0
offset_top = 1.0
offset_right = 287.0
offset_bottom = 24.0
text = "Players connected: "

[node name="GetPeersLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 289.0
offset_top = 41.0
offset_right = 410.0
offset_bottom = 64.0
text = "Get peers: "

[connection signal="button_down" from="UI/HostButton" to="UI" method="beginHosting"]
[connection signal="button_down" from="UI/ClientButton" to="UI" method="connectClient"]
[connection signal="button_down" from="UI/StartGameButton" to="UI" method="callLoadLevel"]
